# koshin

./: .gitignore  README.rst  setup.cfg  setup.py  tox.ini
src/koshin/: __init__.py  __main__.py
src/koshin/fixes/: fix_rename_import.py  fix_rename_mock_patch.py
tests/: test_all_fixes.py
tests/fixtures/rename_import/: newpath_in.py  newpath_out.py
tests/fixtures/rename_mock_patch/: before_in.py  before_out.py
